--- a/pressly/examples/basic.html
+++ b/pressly/examples/basic.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="../pressly.panorama.js"></script>
   </head>
   <body>
@@ -10,6 +11,7 @@
 
     <script type="text/javascript">
       var panorama = new Panorama("#panorama", {
+        enableGyro: false,
         top: "images/tablet_u.jpg",
         bottom: "images/tablet_d.jpg",
         front: "images/tablet_f.jpg",
